# telestickerbot

./: .env.example  .gitignore  Cargo.toml  LICENSE  build.rs
.github/workflows/: build.yml
src/: config.rs  emoji.rs  main.rs
src/bot/: commands.rs  error.rs  mod.rs  retry.rs  telegram.rs
src/bot/handlers/: callback_query.rs  create_pack.rs  kang.rs  mod.rs  set_sticker_pack.rs  start.rs  stats.rs  sticker.rs  transcoder.rs  utils.rs
src/cache/: mod.rs  moka_impl.rs
src/db/: mod.rs  schema.rs
src/repository/: mod.rs  sticker_pack.rs  user.rs
src/service/: mod.rs  sticker.rs  user.rs
