[package]
name = "stickerbot"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
teloxide = { version = "0.17", features = ["throttle", "tracing", "webhooks-axum", "macros", "cache-me"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
libsql = { version = "0.9", features = ["hrana", "remote"] }
thiserror = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
mimalloc = "*"
url = "2"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"
