[package]
name = "stickerbot"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
teloxide = { version = "0.17", features = ["throttle", "tracing", "webhooks-axum", "macros", "cache-me"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
libsql = { version = "0.9", features = ["hrana", "remote"] }
thiserror = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
mimalloc = "*"
url = "2"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
tempfile = "3.27.0"
uuid = { version = "1.23.1", features = ["v4"] }
tokio-util = { version = "0.7.18", features = ["io"] }
ffmpeg-next = "8.1.0"
image = { version = "0.25.10", features = ["webp", "jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
rand = "0.9"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

[dev-dependencies]
proptest = "1"
serde_json = "1"
